--- a/prettyprettyprettyand_art/hidden.html
+++ b/prettyprettyprettyand_art/hidden.html
@@ -1,4 +1,6 @@
-    {block:Hidden}
+
+<!--theme options-->
+{block:Hidden}
 <!--    are we defining names for colors or some shit? I think so but wtf-->
     <meta name="color:Menu bar background" content="#fff"/>
     <meta name="color:Menu bar text color" content="#222"/>
